--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
                         android:orientation="vertical"
                         android:layout_weight="1">
                         <ImageView
+                            android:id="@+id/addArticle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ajout"/>
@@ -156,6 +157,7 @@
                             android:layout_weight="1"
                             android:orientation="vertical">
                             <ImageView
+                                android:id="@+id/addFournisseur"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ajout"/>
