--- a/app/src/main/res/layout/activity_inventaire.xml
+++ b/app/src/main/res/layout/activity_inventaire.xml
@@ -13,6 +13,8 @@ tools:context=".vue.InventaireActivity">
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true" >
+    </ListView>
+
 
 </RelativeLayout>
