--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
                         android:orientation="vertical"
                         android:layout_weight="1">
                         <ImageView
+                            android:id="@+id/suppArticle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/supp"
