ajout du bouton de suppression d'article mais implementation non fonctionnel

--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView_flag"
+        android:id="@+id/imageView_produit"
         android:layout_width="110sp"
         android:layout_height="90sp"
         android:layout_marginStart="16dp"
@@ -20,32 +20,43 @@
 
     <TextView
         android:id="@+id/textView_lib"
-        android:layout_width="183dp"
-        android:layout_height="32dp"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Country Name"
+        android:text="lib_Produit"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView_flag"
+        app:layout_constraintStart_toEndOf="@+id/imageView_produit"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_qte"
-        android:layout_width="207dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="4dp"
-        android:text="Population"
+        android:layout_width="113dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="15dp"
+        android:text="quantité"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@id/textView_lib"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView_lib" />
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="76dp"
+        android:layout_height="38dp"
+        android:layout_marginRight="20dp"
+        android:text="delete"
+        android:textSize="8sp"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    </Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
