--- a/app/src/main/res/layout/activity_add_fournisseur.xml
+++ b/app/src/main/res/layout/activity_add_fournisseur.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,13 +11,14 @@
         android:layout_width="391dp"
         android:layout_height="842dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="4dp"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="4dp">
 
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
@@ -25,9 +27,11 @@
                 android:layout_height="match_parent"
                 android:hint="nom"></EditText>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
@@ -40,6 +44,7 @@
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
@@ -52,41 +57,55 @@
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/emailFour"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="E-mail"></EditText>
+                android:ems="10"
+                android:hint="E-mail"
+                android:inputType="textEmailAddress" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/telFour"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="téléphone"></EditText>
+                android:ems="10"
+                android:hint="téléphone"
+                android:inputType="phone" />
+
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/cpFour"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="code postal"></EditText>
+                android:ems="10"
+                android:hint="code postal"
+                android:inputType="number" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
@@ -99,6 +118,7 @@
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="50dp"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <EditText
@@ -108,12 +128,35 @@
                 android:hint="description"></EditText>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/submitFour"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50pt"
-            android:layout_marginTop="30px"
-            android:text="valider"></Button>
+            android:layout_weight="0"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/submitFour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50pt"
+                android:layout_marginTop="30px"
+                android:text="valider"></Button>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="180dp"
+            android:layout_height="152dp"
+            android:layout_gravity="center"
+            android:layout_weight="0"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btnRetourAddFour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                app:srcCompat="@drawable/home" />
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
