--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -139,7 +139,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -149,7 +148,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-<<<<<<< HEAD
                         android:layout_weight="0.5"
                         android:orientation="vertical">
                         <ImageView
@@ -159,18 +157,7 @@
                             android:src="@drawable/fournisseurs"
                             android:layout_weight="1"/>
 
-=======
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/fournisseur"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/fournisseurs" />
->>>>>>> bae8ca79f5d95a2844fac718aa9dc8fe9bede6d4
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -182,38 +169,23 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:orientation="vertical">
-
                             <ImageView
                                 android:id="@+id/addFournisseur"
-<<<<<<< HEAD
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
                                 android:layout_gravity="end"
                                 android:src="@drawable/ajout"/>
-=======
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/ajout" />
->>>>>>> bae8ca79f5d95a2844fac718aa9dc8fe9bede6d4
                         </LinearLayout>
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
+                            android:orientation="vertical"
+                            android:layout_weight="1">
                             <ImageView
-<<<<<<< HEAD
                                 android:id="@+id/suppFournisseur"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
                                 android:src="@drawable/supp"/>
-=======
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/supp" />
->>>>>>> bae8ca79f5d95a2844fac718aa9dc8fe9bede6d4
 
                         </LinearLayout>
                     </LinearLayout>
@@ -234,15 +206,11 @@
 
 
         </LinearLayout>
-<<<<<<< HEAD
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_weight="1">
         </LinearLayout>
-=======
-
->>>>>>> bae8ca79f5d95a2844fac718aa9dc8fe9bede6d4
     </LinearLayout>
 </RelativeLayout>
